--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ body, .app {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   font-size: 0;
   outline: 0;
+  cursor: pointer;
 }
 
 .open-search button:hover {
@@ -166,7 +167,7 @@ button:active {
   position: relative;
   float: right;
   margin-top: -60px;
-  right: 0;
+  right: -20;
   bottom: -10px;
   width: 40px;
   height: 40px;
